Bug 306981 - Email address copied from a contact via right click is brocken
Summary: Email address copied from a contact via right click is brocken
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-18 13:02 UTC by m.wege
Modified: 2012-09-22 21:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2012-09-18 13:02:27 UTC
When copying an email address via right click on the contact -> copy email address, the email address in the clipboard is broken. It looks like this: "mailto:"XXX%20XXXh%C3%A4xxxx%20%3Cxxxxx.xxxxx%40gmail.com%3E" I have replace the real name and email address with xxxx.

Reproducible: Always
Comment 1 Laurent Montel 2012-09-22 21:32:25 UTC
Git commit 525beff29fba6d620de9619fc3946abba832f77a by Montel Laurent.
Committed on 22/09/2012 at 22:00.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix 306981: Email address copied from a contact via right click is

brocken

FIXED-IN: 4.9.2

M  +1    -0    akonadi/contact/CMakeLists.txt
A  +78   -0    akonadi/contact/textbrowser.cpp     [License: LGPL (v2+)]
M  +10   -33   akonadi/contact/textbrowser_p.h

http://commits.kde.org/kdepimlibs/525beff29fba6d620de9619fc3946abba832f77a