Fix 306981: Email address copied from a contact via right click is

brocken

FIXED-IN: 4.9.2
BUG: 306981